monitoring/grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: grafana
spec:
  selector:
    app: grafana
  ports:
    - port: 80
      targetPort: http
