monitoring/grafana/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: monitoring
  name: grafana
spec:
  rules:
    - host: grafana
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 80
